add comment for drop-down menu
ajout de commentaire pour le menu déroulant

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
   <body>
 
     <header>
+<!-- img liens vers accueil a ajouter -->
         <a href="#"><img src="#" alt="#"></a>
 
+<!-- premier menu déroulant ( découvir) -->
         <nav class="dropdown">
             <button class="dropbtn">Découvrir</button>
             <div class="dropdown-content">
@@ -21,7 +23,7 @@
               <a href="#">Europe</a>
             </div>
         </nav>
-
+<!-- second menu déroulant (Carnet de voyage) -->
         <nav class="dropdown2">
             <button class="dropbtn2">Carnet de voyages</button>
             <div class="dropdown-content2">
