Changing name 2nd drop-down menu
Changement du nom du 2nd menu déroulant

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             </div>
         </nav>
 <!-- second menu déroulant (Carnet de voyage) -->
-        <nav class="dropdown2">
-            <button class="dropbtn2">Carnet de voyages</button>
-            <div class="dropdown-content2">
+        <nav class="dropdown_name">
+            <button class="dropbtn_name">Carnet de voyages</button>
+            <div class="dropdown-content_name">
               <a href="#">Amine</a>
               <a href="#">Anaïs</a>
               <a href="#">Medhi</a>
