new version of cambodge.html/css

--- a/cambodge.html
+++ b/cambodge.html
@@ -15,8 +15,7 @@
 
   <body>
     <div class="main_cambodge">
-        <div class="degrade-horizontal">
-      <div class="article_container">
+       <div class="article_container1">
         <div class="text_container">
           <h3>La ville de Kampot</h3>
           <p>
@@ -30,10 +29,9 @@
         <img
           src="/img/kampot/kampot2.jpg"
           alt="La ville de Kampot vue depuis la rivière"
-          style="width: 300px; height: 300px"
         />
       </div>
-      <div class="article_container_reverse">
+      <div class="article_container2">
         <div class="text_container">
           <h3>Le nouvel an Khmer</h3>
           <p>
@@ -47,13 +45,13 @@
           </p>
         </div>
         <img
-          src="/img/kampot/nouvel-an-khmer2.png"
+          src="/img/kampot/khmer-new-year2.jpeg"
           alt="Des femmes font une bataille d'eau dans la rue lors du Nouvel an Khmer"
-          style="width: 300px; height: 300px"
         />
+      
       </div>
 
-      <div class="article_container">
+      <div class="article_container3">
         <div class="text_container">
           <h3>Le Poivre de Kampot</h3>
           <p>
@@ -64,10 +62,10 @@
           </p>
         </div>
         <img
-          src="/img/kampot/pepper2.jpg"
+          src="/img/kampot/pepper2.png"
           alt="Des grains de poivre noir"
-          style="width: 300px; height: 300px"
         />
+        
       </div>
     </div>
     </div>
