Mise en place de la structure algerie.html/css/js

--- a/algerie.html
+++ b/algerie.html
@@ -9,7 +9,7 @@
       src="https://kit.fontawesome.com/59db8a6c8a.js"
       crossorigin="anonymous"
     ></script>
-    <title>Algerie</title>
+    <title>Itinérances-Algerie</title>
   </head>
   <body>
     <!-- Début du Header -->
@@ -40,11 +40,11 @@
             ><img src="/img/rose-des-vents.png" alt="logo rose des vents"
           /></a>
           <div class="container-inner">
-            <ul>
+            <ul class="ul-left">
               <li><a href="#">Découvrir</a></li>
               <li><a href="#">Carnets de Voyages</a></li>
             </ul>
-            <ul>
+            <ul class="ul-right">
               <li><a href="#">About Us</a></li>
               <li><a href="#">Contact</a></li>
             </ul>
@@ -74,7 +74,7 @@
                 <small>Algerie</small>
                 <div class="big-title">
                   <h1 class="title anim-animate">Alger.</h1>
-                  <h1 class="slider-count">01/<sup>03</sup></h1>
+                  <h1 class="slider-counter">01/<sup>03</sup></h1>
                 </div>
                 <a href="#" class="link-discover">Découvrir la Ville</a>
                 <i class="fas fa-chevron-right"></i>
@@ -85,9 +85,9 @@
             </div>
           </div>
           <div class="column col-3">
-            <span class="page active-page"></span>
-            <span class="page"></span>
-            <span class="page"></span>
+            <span class="pagination pagination-active"></span>
+            <span class="pagination"></span>
+            <span class="pagination"></span>
           </div>
         </div>
       </div>
@@ -133,22 +133,25 @@
             </div>
           </div>
           <div class="card wow anime-animate anime-fondu">
-            <img src="lien image 2" alt="" />
+            <img
+              src="/img/Alger/Photo_de_la_Casbah_d'Alger_en_Algerie.jpeg"
+              alt=""
+            />
             <div>
-              <small>Titre photo</small>
-              <h3>Description en lien avec photo</h3>
+              <small>Al-Kasbah</small>
+              <h3>La Casbah - Inscrit au Patrimoine Mondiale de l'Unesco</h3>
             </div>
           </div>
         </div>
         <div>
           <div class="card wow anime-animate anime-fondu">
-            <img src="lien image 3" alt="" />
+            <img src="/img/Alger/couscous.jpeg" alt="" />
             <div>
-              <small>Titre photo</small>
-              <h3>Description en lien avec photo</h3>
+              <small>T’am</small>
+              <h3>Le Couscous</h3>
             </div>
           </div>
-          <div class="card-small newsletter">
+          <div class="small-card informations">
             <h1>Besoin d'informations?</h1>
             <small>Contactez-nous pour en savoir plus</small>
             <form>
@@ -187,5 +190,7 @@
       </div>
     </footer>
     <!-- Fin du Footer -->
+    <!-- Déclaration lien vers algerie.js -->
+    <script src="/algerie.js"></script>
   </body>
 </html>
