--- a/cambodge.html
+++ b/cambodge.html
@@ -18,35 +18,23 @@
        <div class="article_container1">
         <div class="text_container">
           <h3>La ville de Kampot</h3>
-          <p>
-            Kampot est une ville côtière particulièrement charmante, proche de
-            l’embouchure de la rivière du même nom et tournée vers la mer et le
-            couchant. Elle séduit les voyageurs par son atmosphère d’ancienne
-            ville provinciale, sa tranquillité, l’architecture coloniale de ses
-            vieilles maisons, son vieux marché et son port de pêche désuet.
-          </p>
+          <p> Kampot est une ville côtière particulièrement charmante, proche de l’embouchure de la rivière du même nom et tournée vers la mer et le couchant. Elle séduit les voyageurs par son atmosphère d’ancienne ville provinciale, sa tranquillité, l’architecture coloniale de ses   vieilles maisons, son vieux marché et son port de pêche désuet. Aux alentours, c’est toute une magnifique région qui s’étend, idéale pour les amoureux de la nature. Kampot est devenu très populaire pour les voyageurs qui découvrent la région notamment grâce au charme de l'architecture en ruine française, au parc national de Bokor, aux cascades et à la ville côtière paisible de Kep situé à 24 km.
+         </p>
         </div>
         <img
           src="/img/kampot/kampot2.jpg"
-          alt="La ville de Kampot vue depuis la rivière"
+          alt="Un chauffeur de tuk-tuk dans les rues de Kampot"
         />
       </div>
       <div class="article_container2">
         <div class="text_container">
           <h3>Le nouvel an Khmer</h3>
-          <p>
-            Le poivre de Kampot est aujourd’hui mondialement connu et tous les
-            grands chefs ne jurent que par lui alors que les épiceries fines se
-            félicitent de pouvoir proposer à leurs clients, l’un des meilleurs
-            poivres du monde. Le poivre noir et ses notes fruitées et
-            mentholées, le rouge envoûtant, d'une rare élégance avec des notes
-            de pain chaud et de pâtisserie, et le poivre vert frais aux accents
-            d'herbe fraîche et de citron vert.
+          <p> À l’occasion du Nouvel An khmer, les villes se transforment en terrain de jeu géant ! Petits et grands, armés et sans défense, tout le monde y passe sans exception. Tous les moyens sont bons : seaux d’eau gelée jetés du haut des balcons, pistolets achetés à la sauvette remplis d’eau tiède quémandée aux restaurants, tuyaux d’arrosage... Que vous soyez à pied, en scooter, dans un tuk-tuk ou dans le coffre d’un pick-up, l'eau est inhérente !
           </p>
         </div>
         <img
           src="/img/kampot/khmer-new-year2.jpeg"
-          alt="Des femmes font une bataille d'eau dans la rue lors du Nouvel an Khmer"
+          alt="Bataille d'eau dans la rue lors du Nouvel an Khmer"
         />
       
       </div>
@@ -54,16 +42,12 @@
       <div class="article_container3">
         <div class="text_container">
           <h3>Le Poivre de Kampot</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa vitae
-            itaque fugiat quidem cumque assumenda excepturi consectetur eum nisi
-            quibusdam amet tempora asperiores pariatur alias laboriosam
-            veritatis, est perspiciatis. Incidunt?
+          <p> La région de Kampot est réputée pour sa culture du poivre depuis le XIIIème siècle, mais ce n’est qu’à la fin du XIXe siècle et au début du XXe siècle que la région de Kampot a connu une véritable « fièvre du poivre ». Le Poivre de Kampot Noir développe des arômes forts et délicats. Son goût très intense et doux à la fois révèle des notes résineuses, d’eucalyptus et de menthe fraîche. Le Poivre de Kampot Noir, poivre d’exception, révèle une longueur en bouche exceptionnelle.
           </p>
         </div>
         <img
           src="/img/kampot/pepper2.png"
-          alt="Des grains de poivre noir"
+          alt="Des grains de poivre au soleil"
         />
         
       </div>
