Mise en place de l'animation du hero et de la fin du css de la page

--- a/algerie.html
+++ b/algerie.html
@@ -21,7 +21,6 @@
               <li><a href="#">link1</a></li>
               <li><a href="#">link2</a></li>
               <li><a href="#">link3</a></li>
-              <li><a href="#">link4</a></li>
             </ul>
             <div class="nav-mobile">
               <ul>
@@ -152,11 +151,11 @@
             </div>
           </div>
           <div class="small-card informations">
-            <h1>Besoin d'informations?</h1>
-            <small>Contactez-nous pour en savoir plus</small>
+            <h1>Besoin d'un guide?</h1>
+            <small>Contactez-nous pour prendre rendez-vous</small>
             <form>
               <div class="input-container">
-                <input type="text" placeholder="Entrer votre adresse email" />
+                <input type="text" placeholder="Entrez votre adresse mail" />
                 <button type="submit">
                   <i class="fas fa-arrow-right"></i>
                 </button>
