Page algerie.html/css/js terminée + mise en place de commentaires pour les autres

--- a/algerie.html
+++ b/algerie.html
@@ -108,6 +108,7 @@
     <!-- Fin du Header -->
 
     <!-- Debut de la Section Découvrir -->
+    <!-- ! C'est ici que vous implantez votre section =========> -->
     <section id="discover" class="decouvrir">
       <div class="container-inner">
         <div>
