création de contact.html + mise à jour de voyages.css

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <nav class="dropdown">
               <button class="dropbtn">Découvrir</button>
               <div class="dropdown-content">
-                <a href="#">Afrique</a>
-                <a href="#">Amérique</a>
-                <a href="#">Asie</a>
-                <a href="#">Europe</a>
+                <a href="#algerie.html">Afrique</a>
+                <a href="#mexique.html">Amérique</a>
+                <a href="#cambodge.html">Asie</a>
+                <a href="#allemagne.html">Europe</a>
               </div>
             </nav>
             <!-- second menu déroulant (Carnet de voyage) -->
