mise en lien des différentes pages entre elles + ajout des social medias

--- a/algerie.html
+++ b/algerie.html
@@ -17,25 +17,18 @@
       <nav id="navbar">
         <div class="menu">
           <div>
-            <ul>
-              <li><a href="#">link1</a></li>
-              <li><a href="#">link2</a></li>
-              <li><a href="#">link3</a></li>
-            </ul>
             <div class="nav-mobile">
-              <ul>
-                <li><a href="#">Découvrir</a></li>
-                <li><a href="#">Carnet de Voyages</a></li>
-              </ul>
-              <ul>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact</a></li>
-              </ul>
+              <li><a href="#">Découvrir</a></li>
+              <li><a href="#">Carnets de Voyages</a></li>
+            </ul>
+            <ul>
+              <li><a href="/index.html#aboutus">About Us</a></li>
+              <li><a href="/contact.html">Contact</a></li>
             </div>
           </div>
         </div>
         <div class="container">
-          <a href="#" class="logo"
+          <a href="/index.html" class="logo"
             ><img src="/img/rose-des-vents.png" alt="logo rose des vents"
           /></a>
           <div class="container-inner">
@@ -44,8 +37,8 @@
               <li><a href="#">Carnets de Voyages</a></li>
             </ul>
             <ul class="ul-right">
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="/index.html#aboutus">About Us</a></li>
+              <li><a href="/contact.html">Contact</a></li>
             </ul>
           </div>
           <i class="fas fa-bars" id="menu-button"></i>
@@ -181,12 +174,15 @@
       <div>
         <span>La Plateforme_io</span>
         <span>Rue d'Hozier, Marseille, 13002</span>
-        <span>itinerances@laplateforme.io</span>
+        <span>mohamed-el-amine.necib@laplateforme.io</span>
       </div>
       <div>
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-github-alt"></i></a>
+        <a href="https://www.linkedin.com/in/mohamed-el-amine-necib-9178a417b/"
+          ><i class="fab fa-linkedin"></i
+        ></a>
+        <a href="https://github.com/mohamed-necib"
+          ><i class="fab fa-github-alt"></i
+        ></a>
       </div>
     </footer>
     <!-- Fin du Footer -->
