--- a/cambodge.html
+++ b/cambodge.html
@@ -22,14 +22,14 @@
               <li><a href="#">Carnets de Voyages</a></li>
             </ul>
             <ul>
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="/index.html#aboutus">About Us</a></li>
+              <li><a href="/contact.html">Contact</a></li>
             </ul>
           </div>
         </div>
 
         <div class="container">
-          <a href="#index.html" class="logo"
+          <a href="/index.html" class="logo"
             ><img src="/img/rose-des-vents.png" alt="logo rose des vents"
           /></a>
           <div class="container-inner">
@@ -38,8 +38,8 @@
               <li><a href="#">Carnets de Voyages</a></li>
             </ul>
             <ul class="ul-right">
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="/index.html#aboutus">About Us</a></li>
+              <li><a href="/contact.html">Contact</a></li>
             </ul>
           </div>
           <i class="fas fa-bars" id="menu-button"></i>
@@ -51,15 +51,12 @@
           <div class="column col-1">
             <span class="year">2022</span>
             <div class="social">
-              <a href="#">
-                <i class="fab fa-facebook-f"></i>
-              </a>
-              <a href="#">
-                <i class="fab fa-instagram"></i>
-              </a>
-              <a href="#">
-                <i class="fab fa-github-alt"></i>
-              </a>
+              <a href="https://www.linkedin.com/in/anais-labit-327616129"
+                ><i class="fab fa-linkedin"></i
+              ></a>
+              <a href="https://github.com/anais-labit"
+                ><i class="fab fa-github-alt"></i
+              ></a>
             </div>
           </div>
 
@@ -189,12 +186,15 @@
       <div>
         <span>La Plateforme_io</span>
         <span>Rue d'Hozier, Marseille, 13002</span>
-        <span>itinerances@laplateforme.io</span>
+        <span>anais.labit@laplateforme.io</span>
       </div>
       <div>
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-github-alt"></i></a>
+        <a href="https://www.linkedin.com/in/anais-labit-327616129"
+          ><i class="fab fa-linkedin"></i
+        ></a>
+        <a href="https://github.com/anais-labit"
+          ><i class="fab fa-github-alt"></i
+        ></a>
       </div>
     </footer>
     <!-- Fin du Footer -->
