lien des pages depuis algerie.html, changement des couleurs social et ajout media queries sur cambodge.css

--- a/cambodge.html
+++ b/cambodge.html
@@ -68,7 +68,11 @@
                   <h1 class="title anim-animate">Kampot.</h1>
                   <h1 class="slider-counter">01/<sup>03</sup></h1>
                 </div>
-                <a href="#" class="link-discover">Découvrir la Ville</a>
+                <a
+                  href="https://www.amica-travel.com/cambodge/kampot"
+                  class="link-discover"
+                  >Découvrir la Ville</a
+                >
                 <i class="fas fa-chevron-right"></i>
               </div>
               <a href="#main_cambodge" class="scroll-button">
