--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                 <img src="/img/amine.png" alt="Avatar de Mohamed-El-Amine Necib" style="width: 250px;height: 250px;">
             </div>
             <div class="flip_card_back">
-                <h3>Mohamed el-Amine</h3>
-                <p>Je suis le formidable Mohamed el-Amine Necib !</p>
+                <h3>Amine</h3>
+                <p>Je suis le formidable Amine !</p>
                 <a href="/algerie.html">Mon carnet de voyage</a>
             </div>
         </div>
@@ -104,7 +104,7 @@
             </div>
             <div class="flip_card_back">
                 <h3>Sylvain</h3>
-                <p>Je suis le formidable Sylvain Mihut !</p>
+                <p>Je suis le formidable Sylvain !</p>
                 <a href="/mexique.html">Mon carnet de voyage</a>
             </div>
         </div>
