--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
             <div class="flip_card_back">
                 <h3>Anaïs</h3>
-                <p>Je suis la formidable Anaïs !</p>
+                <p>Mes parents m'ont transmis le virus ! Backpackeuse solo depuis plus de 10 ans, j'adore découvrir le monde hors des sentiers battus. </p>
                 <a href="/cambodge.html">Mon carnet de voyage</a>
             </div>
         </div>
