ajustement de la taille de la photo contact, ajout du texte carte anais, space beteween dans le footer contact et index

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       </div>
       <div>
         <span>La Plateforme_io</span>
-        <span>Rue d'Hozier, Marseille, 13002</span>
+        <span>Rue d'Hozier, Marseille, 13002 -</span>
         <span>itinerances@laplateforme.io</span>
       </div>
     </footer>
