--- a/algerie.html
+++ b/algerie.html
@@ -49,15 +49,12 @@
           <div class="column col-1">
             <span class="year">2022</span>
             <div class="social">
-              <a href="#">
-                <i class="fab fa-facebook-f"></i>
-              </a>
-              <a href="#">
-                <i class="fab fa-instagram"></i>
-              </a>
-              <a href="#">
-                <i class="fab fa-github-alt"></i>
-              </a>
+        <a href="https://www.linkedin.com/in/mohamed-el-amine-necib-9178a417b/"
+          ><i class="fab fa-linkedin"></i
+        ></a>
+        <a href="https://github.com/mohamed-necib"
+          ><i class="fab fa-github-alt"></i
+        ></a>
             </div>
           </div>
           <div class="container-inner">
@@ -71,7 +68,7 @@
                 <a href="#" class="link-discover">Découvrir la Ville</a>
                 <i class="fas fa-chevron-right"></i>
               </div>
-              <a href="#" class="scroll-button">
+              <a href="#discover" class="scroll-button">
                 <i class="fas fa-chevron-down"></i>
               </a>
             </div>
