--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
       </div>
       <div>
         <span>La Plateforme_io</span>
-        <span>Rue d'Hozier, Marseille, 13002</span>
+        <span>Rue d'Hozier, Marseille, 13002 -</span>
         <span>itinerances@laplateforme.io</span>
       </div>
     </footer>
