Mexico change of links and micro modification

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
             <div class="flip_card_back">
                 <h3>Sylvain</h3>
-                <p>Je suis le formidable Sylvain !</p>
+                <p>Adorant la culture mexicaine depuis de nombreuse années je vous invite a découvrir la ville de Guadalajara sur ma page.</p>
                 <a href="/mexique.html">Mon carnet de voyage</a>
             </div>
         </div>
