--- a/mexique.html
+++ b/mexique.html
@@ -22,13 +22,13 @@
                 <li><a href="#">Carnets de Voyages</a></li>
               </ul>
               <ul>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="/index.html#aboutus">About Us</a></li>
+                <li><a href="/contact.html">Contact</a></li>
               </ul>
             </div>
         </div>
         <div class="container">
-          <a href="#" class="logo"
+          <a href="/index.html" class="logo"
             ><img src="/img/rose-des-vents.png" alt="logo rose des vents"
           /></a>
           <div class="container-inner">
@@ -37,8 +37,8 @@
               <li><a href="#">Carnets de Voyages</a></li>
             </ul>
             <ul class="ul-right">
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="/index.html#aboutus">About Us</a></li>
+              <li><a href="/contact.html">Contact</a></li>
             </ul>
           </div>
           <i class="fas fa-bars" id="menu-button"></i>
@@ -49,15 +49,12 @@
           <div class="column col-1">
             <span class="year">2022</span>
             <div class="social">
-              <a href="#">
-                <i class="fab fa-facebook-f"></i>
-              </a>
-              <a href="#">
-                <i class="fab fa-instagram"></i>
-              </a>
-              <a href="#">
-                <i class="fab fa-github-alt"></i>
-              </a>
+              <a href="https://www.linkedin.com/in/sylvain-mihut-6769b8256/"
+                ><i class="fab fa-linkedin"></i
+              ></a>
+              <a href="https://github.com/sylvain-mihut"
+                ><i class="fab fa-github-alt"></i
+              ></a>
             </div>
           </div>
           <div class="container-inner">
@@ -68,10 +65,11 @@
                   <h1 class="title anim-animate">Guadalajara.</h1>
                   <h1 class="slider-counter">01/<sup>03</sup></h1>
                 </div>
-                <a href="#" class="link-discover">Découvrir la Ville</a>
+                <a 
+                  href="https://www.petitfute.com/v37438-guadalajara/c1173-visites-points-d-interet/" class="link-discover">Découvrir la Ville</a>
                 <i class="fas fa-chevron-right"></i>
               </div>
-              <a href="#" class="scroll-button">
+              <a href="#history_of_the_city"        class="scroll-button">
                 <i class="fas fa-chevron-down"></i>
               </a>
             </div>
@@ -109,7 +107,7 @@
 
       <div class="banner_arcticle_history">
       
-        <article class="history_of_the_city">
+        <article id="history_of_the_city" class="history_of_the_city">
           <h2>Histoire de la ville</h2>
           <p>
             La région a été habitée par les aztèques qui y ont installé un empire très développé et très solide. Cependant, avec les conquêtes espagnoles, l’Empire a chuté en 1521.
@@ -230,15 +228,6 @@
       </section>
     <!-- </main> -->
 
-
-
-
-
-
-
-
-
-
     <hr />
 
     <!-- Début du Footer -->
@@ -253,15 +242,17 @@
       <div>
         <span>La Plateforme_io</span>
         <span>Rue d'Hozier, Marseille, 13002</span>
-        <span>itinerances@laplateforme.io</span>
+        <span>sylvain.mihut@laplateforme.io</span>
       </div>
       <div>
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-github-alt"></i></a>
+        <a href="https://www.linkedin.com/in/sylvain-mihut-6769b8256/"
+        ><i class="fab fa-linkedin"></i
+      ></a>
+        <a href="https://github.com/sylvain-mihut"><i class="fab fa-github-alt"></i></a>
       </div>
     </footer>
     <!-- Fin du Footer -->
-    <!-- Déclaration lien vers algerie.js -->
-<script src="/mexique.js"></script>  </body>
+    <!-- Déclaration lien vers mexique.js -->
+    <script src="/mexique.js"></script>  
+  </body>
 </html>
